IN header replaced projects to contact

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <strong>Yaswanth K</strong>
       </div>
       <nav class="cta">
-        <a class="btn ghost" href="#projects">Projects</a>
+        <a class="btn ghost" href="#Contact">Contact</a>
         <a class="btn ghost" href="#skills">Skills</a>
         <a class="btn ghost" href="#experience">Experience</a>
         <a class="btn primary" href="Yaswanth_K__1_ (1).pdf" download>Download Resume</a>
