Moved the blue dot from top of data engineer to little left

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     .card p{margin:0;color:#bdc6d1}
     .pill{display:inline-block;margin-top:10px;font-size:12px;border:1px solid #243042;padding:6px 10px;border-radius:999px;color:#b2c8ff}
     .row{display:flex;gap:14px;align-items:center;flex-wrap:wrap}
-    .list{margin:0;padding-left:18px;color:#c9d3de}
+    .list{margin:0;padding: left 18px;px;color:#c9d3de}
 
     .timeline{position:relative;padding-left:24px}
     .timeline:before{content:"";position:absolute;left:9px;top:6px;bottom:6px;width:2px;background:#1f2731}
     .t-item{position:relative;margin:0 0 18px}
-    .t-item:before{content:"";position:absolute;left:-2px;top:6px;width:10px;height:10px;border-radius:50%;background:var(--brand);box-shadow:0 0 0 4px rgba(110,168,254,.18)}
+    .t-item:before{content:"";position:absolute;left: -19px;px;top:6px;width:10px;height:10px;border-radius:50%;background:var(--brand);box-shadow:0 0 0 4px rgba(110,168,254,.18)}
     .t-role{font-weight:700}
     .t-meta{color:var(--muted);font-size:13px;margin-top:2px}
     .t-body{margin-top:8px;color:#cfe3ff}
